# IMSDK

./: CMakeLists.txt
src/YouMeIMEngine/: CMakeLists.txt  DataReportDefine.cpp  DataReportDefine.h  MessageRecorder.cpp  MessageRecorder.h  NetworkService.cpp  NetworkService.h  NoticeManager.cpp  NoticeManager.h  ReportService.h  SimpleComplexConvert.cpp  SimpleComplexConvert.h  XUDP.cpp  XUDP.h  YIM.cpp  YouMeFriendManager.cpp  YouMeFriendManager.h  YouMeIMCommonDef.h  YouMeIMGroupManager.cpp  YouMeIMGroupManager.h  YouMeIMManager.cpp  YouMeIMManager.h  YouMeIMMessageManager.cpp  YouMeIMMessageManager.h  YouMeIMUserInfoManager.cpp  YouMeIMUserInfoManager.h
src/YouMeIMEngine/Android/: YouMeApplication_Android.h
src/YouMeIMEngine/Android/java/: AndroidManifest.xml  build.sh  build_ali_recognize.gradle  build_all_recognize.gradle  build_ifly_recognize.gradle  build_no_recognize.gradle  build_usc_recognize.gradle
src/YouMeIMEngine/Android/java/gradle/wrapper/: gradle-wrapper.properties
src/YouMeIMEngine/Android/java/src-ali/com/youme/speech/: AliSpeechRecognizer.java
src/YouMeIMEngine/Android/java/src-all-recognize/com/youme/speech/: UscSpeechRecognizer.java
src/YouMeIMEngine/Android/java/src-ifly/com/youme/speech/: IflySpeechRecognizer.java
src/YouMeIMEngine/Android/java/src-no-recognize/com/youme/speech/: AliSpeechRecognizer.java  IflySpeechRecognizer.java  UscSpeechRecognizer.java
src/YouMeIMEngine/Android/java/src-usc/com/youme/speech/: UscSpeechRecognizer.java
src/YouMeIMEngine/Android/java/src/com/anthonycr/grant/: PermissionsManager.java  PermissionsResultAction.java
src/YouMeIMEngine/Android/java/src/com/youme/im/: CommonConst.java  IMEngine.java  NativeEngine.java  NetworkStatusReceiver.java  NetworkStatusReceiver2.java  buildh.sh
src/YouMeIMEngine/Android/java/src/com/youme/lbs/: GeographyLocation.java  GeographyLocationManager.java  IGeographyLocationCallback.java
src/YouMeIMEngine/Android/java/src/com/youme/voice/: AudioRecognizeType.java  AudioRecorder.java  IAudioPlayListener.java  IAudioRecordListener.java  ISpeechRecognize.java  VoiceManager.java  WAVHeadInfo.java  YouMeAudioRecorder.java
src/YouMeIMEngine/Android/javasdk/: .project  AndroidManifest.xml  build.gradle  build.sh  project.properties
src/YouMeIMEngine/Android/javasdk/src/com/youme/imsdk/: AudioPlayer.java  ContactsSessionInfo.java  IYIMMessageBodyBase.java  YIMCallBackProtocol.java  YIMCallBackProtocolV2.java  YIMClient.java  YIMConstInfo.java  YIMExtraGifParam.java  YIMExtraUserInfo.java  YIMForbiddenSpeakInfo.java  YIMForbiddenSpeakList.java  YIMHistoryMessage.java  YIMHistoryMessageBody.java  YIMMessage.java  YIMMessageBodyAudio.java  YIMMessageBodyCustom.java  YIMMessageBodyFile.java  YIMMessageBodyGift.java  YIMService.java  (+2 more)
src/YouMeIMEngine/Android/jni/: com_youme_im_NativeEngine.cpp  com_youme_im_NativeEngine.h
src/YouMeIMEngine/CInterface/: IYouMeCInterface.cpp  IYouMeCInterface.h
src/YouMeIMEngine/Location/: LocationInterface.h  LocationUtil.cpp  LocationUtil.h  YouMeLocationManager.cpp  YouMeLocationManager.h
src/YouMeIMEngine/Location/Android/: AndroidLocationManager.cpp  AndroidLocationManager.h
src/YouMeIMEngine/Location/IOS/: GeographyLocation.h  GeographyLocation.mm  IOSLocationManager.h  IOSLocationManager.mm
src/YouMeIMEngine/Speech/: AudioResample.cpp  AudioResample.h  SpeechUtil.cpp  SpeechUtil.h  VoiceInterface.h  YouMeSpeechManager.cpp  YouMeSpeechManager.h
src/YouMeIMEngine/Speech/Android/: AndroidVoiceManager.cpp  AndroidVoiceManager.h
src/YouMeIMEngine/Speech/IOS/: AliAudioRecognizer.h  AliAudioRecognizer.mm  AudioPlayer.mm  AudioQueueRecorder.mm  AudioRecord.h  AudioRecord.mm  IOSVoiceManager.h  IOSVoiceManager.mm  ISpeechRecognizer.h  ISpeechRecognizer.mm  IflyAudioRecognizer.h  IflyAudioRecognizer.mm  IflyRecordRecognizer.h  IflyRecordRecognizer.mm  RecognizeManager.h  RecognizeManager.mm  UscAudioRecognizer.h  UscAudioRecognizer.mm  YouMeAudioRecorder.h  YouMeAudioRecorder.mm
src/YouMeIMEngine/Speech/OSX/: AudioPlayer.h  AudioQueueRecorder.h  AudioQueueRecorder.mm  AudioRecord.h  AudioRecord.mm  OSXVoiceManager.h  OSXVoiceManager.mm  RecognizeManager.h  RecognizeManager.mm  YouMeAudioRecorder.h  YouMeAudioRecorder.mm
src/YouMeIMEngine/Speech/Windows/: AliSpeechRecognize.cpp  AliSpeechRecognize.h  AudioRecord.cpp  AudioRecord.h  IflySpeechRecognize.cpp  IflySpeechRecognize.h  RecognizeInterface.h  UscSpeechRecognize.cpp  UscSpeechRecognize.h  WinVoiceManager.cpp  WinVoiceManager.h
src/YouMeIMEngine/Speech/agc/: AGCPlatform.h  WavReader.cpp  WavReader.h  WavWriter.cpp  WavWriter.h  analog_agc.cpp  analog_agc.h  digital_agc.cpp  digital_agc.h  gain_control.h  tdav_codec_audio_mixer.cpp  tdav_codec_audio_mixer.h
src/YouMeIMEngine/Speech/libspeexdsp/: _kiss_fft_guts.h  arch.h  bfin.h  buffer.cpp  fftwrap.cpp  fftwrap.h  filterbank.cpp  filterbank.h  fixed_generic.h  kiss_fft.cpp  kiss_fft.h  kiss_fftr.cpp  kiss_fftr.h  math_approx.h  mdf.cpp  misc_bfin.h  os_support.h  preprocess.cpp  pseudofloat.h
src/YouMeIMEngine/Speech/speex/: config.h  speex_buffer.h  speex_echo.h  speex_preprocess.h  speexdsp_config_types.h
src/YouMeIMEngine/pb/: buildproto.sh  server_protocol_code.h  youme_ali_access_token.pb.cc  youme_ali_access_token.pb.h  youme_ali_access_token.proto  youme_check_online.pb.cc  youme_check_online.pb.h  youme_check_online.proto  youme_forbid_record.pb.cc  youme_forbid_record.pb.h  youme_forbid_record.proto  youme_getdistrict.pb.cc  youme_getdistrict.pb.h  youme_getdistrict.proto  youme_getmsg.pb.cc  youme_getmsg.pb.h  youme_getmsg.proto  youme_heartbeat.pb.cc  youme_heartbeat.pb.h  youme_heartbeat.proto  youme_kickoff.pb.cc  youme_kickoff.pb.h  youme_kickoff.proto  youme_login.pb.cc  youme_login.pb.h  youme_login.proto  youme_logout.pb.cc  youme_logout.pb.h  youme_logout.proto  youme_mask_usermsg.pb.cc  youme_mask_usermsg.pb.h  youme_mask_usermsg.proto  youme_nearby.pb.cc  youme_nearby.pb.h  youme_nearby.proto  youme_notify.pb.cc  youme_notify.pb.h  youme_notify.proto  youme_query_userinfo.pb.cc  youme_query_userinfo.pb.h  (+46 more)
(+160 files in other folders)
