#
project(YouMeIM)

cmake_minimum_required(VERSION 2.8)

SET (CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/build/CMakeModules/;${CMAKE_MODULE_PATH}")


set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../bin)

INCLUDE (globalsetting)

IF(__ANDROID__)
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/Android/${CMAKE_BUILD_TYPE}/${ANDROID_ABI})
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/Android/${CMAKE_BUILD_TYPE}/${ANDROID_ABI})
	ADD_DEFINITIONS(-DOS_ANDROID)
ELSEIF (WIN32) 
	IF(WIN64)
		set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/WIN64/${CMAKE_BUILD_TYPE})
		set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/WIN64/${CMAKE_BUILD_TYPE})
		ADD_DEFINITIONS(-DOS_WIN32)
	ELSE(WIN64)
		set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/WIN32/${CMAKE_BUILD_TYPE})
		set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/WIN32/${CMAKE_BUILD_TYPE})
		ADD_DEFINITIONS(-DOS_WIN32)
	ENDIF(WIN64)
ELSEIF (__OSX__)
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/MAC/${CMAKE_BUILD_TYPE})
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/MAC/${CMAKE_BUILD_TYPE})
	ADD_DEFINITIONS(-DOS_OSX)
ELSEIF (__OSX_DYLIB__)
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/MAC/${CMAKE_BUILD_TYPE})
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/MAC/${CMAKE_BUILD_TYPE})
	ADD_DEFINITIONS(-DOS_OSX)
ELSEIF (__IOS__)
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/IOS/${CMAKE_BUILD_TYPE})
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/IOS/${CMAKE_BUILD_TYPE})
	ADD_DEFINITIONS(-DOS_IOS)
ELSEIF (__IOS_DYLIB__)
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/IOS_DYLIB/${CMAKE_BUILD_TYPE})
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/IOS_DYLIB/${CMAKE_BUILD_TYPE})
	ADD_DEFINITIONS(-DOS_IOS)
ELSEIF (__IOSSIMULATOR__)
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/IOSSIMULATOR/${CMAKE_BUILD_TYPE})
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/IOSSIMULATOR/${CMAKE_BUILD_TYPE})
	ADD_DEFINITIONS(-DOS_IOSSIMULATOR)
ENDIF(__ANDROID__)

IF(__IFLY_RECOGNIZE__)
	ADD_DEFINITIONS(-DIFLY_RECOGNIZE)
ENDIF(__IFLY_RECOGNIZE__)

IF(__USC_RECOGNIZE__)
	ADD_DEFINITIONS(-DUSC_RECOGNIZE)
ENDIF(__USC_RECOGNIZE__)

IF(__ALI_RECOGNIZE__)
	ADD_DEFINITIONS(-DALI_RECOGNIZE)
ENDIF(__ALI_RECOGNIZE__)

add_subdirectory(src/YouMeIMEngine)







