project (YouMeIMEngine)

ADD_DEFINITIONS(-DCURL_STATICLIB -DCARES_STATICLIB -DYOUMEDLL_EXPORTS -DWAVE_FORMAT_PCM)
INCLUDE_DIRECTORIES (${COMMON_INCLUDE} .. )

FILE (GLOB header_files *.h)
FILE (GLOB source_files *.c *.cc *.cpp)
FILE (GLOB pb pb/*.h pb/*.cpp pb/*.cc)

FILE (GLOB CInterface CInterface/*.h CInterface/*.cpp CInterface/*.cc)

FILE (GLOB Android Android/jni/*.h Android/jni/*.cpp Android/jni/*.cc)


FILE (GLOB Speech Speech/*.h Speech/*.cpp Speech/*.cc)

FILE (GLOB AndroidSpeech Speech/Android/*.h Speech/Android/*.cpp Speech/Android/*.cc)
FILE (GLOB IOSSpeech Speech/IOS/*.h Speech/IOS/*.cpp Speech/IOS/*.cc Speech/IOS/*.hpp Speech/IOS/*.mm)
FILE (GLOB OSXSpeech Speech/OSX/*.h Speech/OSX/*.cpp Speech/OSX/*.cc Speech/OSX/*.hpp Speech/OSX/*.mm)
FILE (GLOB WindowsSpeech Speech/Windows/*.h Speech/Windows/*.cpp Speech/Windows/*.cc Speech/Windows/*.h)
FILE (GLOB agc Speech/agc/*.h Speech/agc/*.cpp Speech/agc/*.cc Speech/agc/*.h)
FILE (GLOB speex Speech/speex/*.h Speech/speex/*.cpp Speech/speex/*.cc Speech/speex/*.h)
FILE (GLOB libspeexdsp Speech/libspeexdsp/*.h Speech/libspeexdsp/*.cpp Speech/libspeexdsp/*.c Speech/libspeexdsp/*.h)
FILE (GLOB Location Location/*.h Location/*.cpp Location/*.cc)
FILE (GLOB AndroidLocation Location/Android/*.h Location/Android/*.cpp Location/Android/*.cc)
FILE (GLOB IOSLocation Location/IOS/*.h Location/IOS/*.cpp Location/IOS/*.cc Location/IOS/*.hpp Location/IOS/*.mm)
FILE (GLOB OSXLocation Location/OSX/*.h Location/OSX/*.cpp Location/OSX/*.cc Location/OSX/*.hpp Location/OSX/*.mm)

ADD_DEFINITIONS(-DDISABLE_WARNINGS -DDISABLE_NOTIFICATIONS -DOVERRIDE_SPEEX_FATAL -DRELEASE)

SOURCE_GROUP("pb" FILES ${pb})
SOURCE_GROUP("CInterface" FILES ${CInterface})
SOURCE_GROUP("Android" FILES ${Android})
SOURCE_GROUP("Speech" FILES ${Speech})

SOURCE_GROUP("Speech\\Android" FILES ${AndroidSpeech})
SOURCE_GROUP("Speech\\IOS" FILES ${IOSSpeech})
SOURCE_GROUP("Speech\\OSX" FILES ${OSXSpeech})
SOURCE_GROUP("Speech\\Windows" FILES ${WindowsSpeech})
SOURCE_GROUP("Speech\\agc" FILES ${agc})
SOURCE_GROUP("Speech\\speex" FILES ${speex})
SOURCE_GROUP("Speech\\libspeexdsp" FILES ${libspeexdsp})
SOURCE_GROUP("Location" FILES ${Location})
SOURCE_GROUP("Location\\Android" FILES ${AndroidLocation})
SOURCE_GROUP("Location\\IOS" FILES ${IOSLocation})
SOURCE_GROUP("Location\\OSX" FILES ${OSXLocation})


FILE (GLOB AndroidSystemProvider Android/*.h Android/*.cpp Android/*.cc)
SOURCE_GROUP("AndroidSystemProvider" FILES ${AndroidSystemProvider})


IF(WIN32)
	IF(VS_DEBUG)
	set(DLLNAME "yim_debug")
	ELSE(VS_DEBUG)
	set(DLLNAME "yim")
	ENDIF(VS_DEBUG)
	IF(WIN64)
		LINK_DIRECTORIES(${COMMON_LIB} ${COMMON_DIR}/youme_common/lib/x86_64_2013)
		ADD_LIBRARY(${DLLNAME} SHARED ${header_files} ${source_files} ${pb} ${CInterface} ${Speech} ${WindowsSpeech} ${agc} ${speex} ${libspeexdsp} ${Location})
	ELSE(WIN64)
		LINK_DIRECTORIES(${COMMON_LIB} ${COMMON_DIR}/youme_common/lib/windows)
		ADD_LIBRARY(${DLLNAME} SHARED ${header_files} ${source_files} ${pb} ${CInterface} ${Speech} ${WindowsSpeech} ${agc} ${speex} ${libspeexdsp} ${Location})
	ENDIF(WIN64)
	IF(VS_DEBUG)
		TARGET_LINK_LIBRARIES (${DLLNAME} YouMeCommon_debug wldap32.lib  Version.lib Setupapi.lib ws2_32 Winmm.lib Psapi.lib)
	ELSE(VS_DEBUG)
		TARGET_LINK_LIBRARIES (${DLLNAME} YouMeCommon wldap32.lib  Version.lib Setupapi.lib ws2_32 Winmm.lib Psapi.lib)
	ENDIF(VS_DEBUG)
ELSEIF (__ANDROID__) 
	LINK_DIRECTORIES(${COMMON_LIB} ${COMMON_DIR}/youme_common/lib/android/${ANDROID_ABI})
	ADD_LIBRARY(yim SHARED ${header_files} ${source_files} ${pb} ${CInterface} ${Android}  ${Speech} ${AndroidSpeech} ${AndroidSystemProvider} ${agc} ${speex} ${libspeexdsp} ${Location} ${AndroidLocation})
	TARGET_LINK_LIBRARIES (yim YouMeCommon z log)
ELSEIF(__IOS__)
	LINK_DIRECTORIES(${COMMON_LIB} ${COMMON_DIR}/youme_common/lib/ios)
	ADD_LIBRARY (yim ${header_files} ${source_files} ${pb} ${CInterface}  ${Speech} ${IOSSpeech} ${agc} ${speex} ${libspeexdsp} ${Location} ${IOSLocation})
	set_xcode_property(yim CLANG_ENABLE_OBJC_ARC "YES")
    set_xcode_property(yim IPHONEOS_DEPLOYMENT_TARGET "7.0")
ELSEIF(__IOS_DYLIB__)
	LINK_DIRECTORIES(${COMMON_DIR}/youme_common/lib/ios)
	find_library(COREFoundation CoreFoundation)
    find_library(AVFoundation AVFoundation)
	find_library(Foundation Foundation)
	find_library(SystemConfiguration SystemConfiguration)
	find_library(AudioToolbox AudioToolbox)
	find_library(IOKit IOKit)
	find_library(UIKit UIKit)
	find_library(CoreTelephony CoreTelephony)
	find_library(CoreGraphics  CoreGraphics)
	find_library(QuartzCore  QuartzCore)
	find_library(CoreLocation  CoreLocation)
	ADD_LIBRARY (yim SHARED ${header_files} ${source_files} ${pb} ${CInterface}  ${Speech} ${IOSSpeech} ${agc} ${speex} ${libspeexdsp} ${Location} ${IOSLocation})
	TARGET_LINK_LIBRARIES(yim ${COMMON_DIR}/youme_common/lib/ios/libYouMeCommon.a ${COMMON_DIR}/build/thirdLib/iflyMSC.framework/iflyMSC ${COMMON_DIR}/build/thirdLib/USCModule.framework/USCModule ${COMMON_DIR}/build/thirdLib/AliyunNlsSdk.framework/AliyunNlsSdk sqlite3 z resolv ${COREFoundation} ${Foundation} ${AVFoundation} ${SystemConfiguration} ${AudioToolbox} ${CoreTelephony} ${CoreGraphics} ${CoreLocation} ${QuartzCore} ${IOKit} ${UIKit} -Wl,-all_load)
    set_xcode_property(yim CLANG_ENABLE_OBJC_ARC "YES")
    set_xcode_property(yim IPHONEOS_DEPLOYMENT_TARGET "7.0")
ELSEIF(__IOSSIMULATOR__)
	LINK_DIRECTORIES(${COMMON_LIB} ${COMMON_DIR}/youme_common/lib/ios)
	ADD_LIBRARY (yim ${header_files} ${source_files} ${pb} ${CInterface}  ${Speech} ${IOSSpeech} ${agc} ${speex} ${libspeexdsp} ${Location} ${IOSLocation})
	set_xcode_property(yim CLANG_ENABLE_OBJC_ARC "YES")
    set_xcode_property(yim IPHONEOS_DEPLOYMENT_TARGET "7.0")
ELSEIF (__OSX__)
	set(CMAKE_MACOSX_RPATH 1)
	LINK_DIRECTORIES(${COMMON_LIB} ${COMMON_DIR}/youme_common/lib/macos)
	ADD_LIBRARY (yim ${header_files} ${source_files} ${pb} ${CInterface}  ${Speech} ${OSXSpeech} ${agc} ${speex} ${libspeexdsp} ${Location} ${OSXLocation})
ELSEIF (__OSX_DYLIB__)
	set(CMAKE_MACOSX_RPATH 1)
	LINK_DIRECTORIES(${COMMON_LIB} ${COMMON_DIR}/youme_common/lib/macos)
	FIND_LIBRARY(SQLITE3_LIBRARY SQLite3)
	find_library(LIBZ Z REQUIRED)
    FIND_LIBRARY(RES_LIBRARY RESOLV)
	find_library(COREFoundation CoreFoundation)
    find_library(AVFoundation AVFoundation)
	find_library(Foundation Foundation)
	find_library(SystemConfiguration SystemConfiguration)
    find_library(IOKit IOKit)
    find_library(AudioToolbox AudioToolbox)

	SET(MACOSX_BUNDLE_BUNDLE_NAME "yim")
	SET(MACOSX_BUNDLE_BUNDLE_VERSION "1.0")
	SET(MACOSX_BUNDLE_COPYRIGHT "Copyright © 2017 youme.im. All rights reserved.")
	SET(MACOSX_BUNDLE_GUI_IDENTIFIER "com.youme.yimu3dbundle")
	SET(PRODUCT_NAME "yim")
	#ADD_EXECUTABLE (yim MACOSX_BUNDLE ${header_files} ${source_files} ${pb} ${CInterface}  ${Speech} ${agc} ${speex} ${libspeexdsp} )
	add_library(yim SHARED ${header_files} ${source_files} ${pb} ${CInterface}  ${Speech} ${OSXSpeech} ${agc} ${speex} ${libspeexdsp} ${OSXLocation} ${Location})
TARGET_LINK_LIBRARIES(yim ${COMMON_DIR}/youme_common/lib/macos/libYouMeCommon.a ${SQLITE3_LIBRARY} ${RES_LIBRARY} ${COREFoundation} ${Foundation} ${AVFoundation} ${SystemConfiguration} ${AudioToolbox} ${LIBZ} ${IOKit} -Wl,-all_load)
	set_xcode_property(yim CLANG_ENABLE_OBJC_ARC "YES")
ENDIF(WIN32)
